added right drawer trade lock in
